--- a/detail.html
+++ b/detail.html
@@ -19,7 +19,7 @@
         <div class="top_right">
         	<a href="#" style="color:#06F;">登录</a>&nbsp;&nbsp;
             <a href="#" style="color:#06F;">免费注册</a>&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
-            <img src="images/shopping_cart.png" style="width:20px;height:20px;margin-bottom:1px;" /><a href="#">购物车</a>&nbsp;|
+            <img src="images/shopping_cart.png" style="width:20px;height:20px;margin-bottom:1px;" /><a href="car.html">购物车</a>&nbsp;|
             <a href="#">我的订单</a>&nbsp;|
             <a href="#">我的心书</a>&nbsp;|
             <a href="#">帮助</a>
@@ -27,7 +27,7 @@
     </div>
     <!--头部部分 -->
     <div class="header">
-    	<img src="images/logo.png" style="width:150px;height:150px;float:left;"/>
+    	<a href="index.html"><img src="images/logo.png" style="width:150px;height:150px;float:left;"/></a>
         <div class="search">
 		<form action="#" method="get" class="search_form">     
         	<input type="text" name="s" class="sinput" placeholder="3月英语季 专八资料回收">     	
