--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 	<div class="top_menu">
     	<div class="top_left">
         	<span><strong>欢迎您!</strong></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <img src="images/collect.png" style="width:18px;height:18px;margin-top:5px;" />
+            <a href="index.html"><img src="images/collect.png" style="width:18px;height:18px;margin-top:5px;" /></a>
             <span><a href="#">收藏心书网</a></span>
         </div>
         <div class="top_right">
         	<a href="login.html" style="color:#06F;">登录</a>&nbsp;&nbsp;
             <a href="register.html" style="color:#06F;">免费注册</a>&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
-            <img src="images/shopping_cart.png" style="width:20px;height:20px;margin-bottom:1px;" /><a href="#">购物车</a>&nbsp;|
+            <img src="images/shopping_cart.png" style="width:20px;height:20px;margin-bottom:1px;" /><a href="car.html">购物车</a>&nbsp;|
             <a href="#">我的订单</a>&nbsp;|
             <a href="#">我的心书</a>&nbsp;|
             <a href="#">帮助</a>
