--- a/login.html
+++ b/login.html
@@ -39,10 +39,15 @@
             </p>
 		</div>
 		<div class="loginBoxButtons">
-			<button class="loginBtn" >登  录</button>
+            <!-- <button class="loginBtn">登  录</button> -->
+			<a class="loginBtn" href="index.html">登  录</a>
 		</div>
         </div>
     </form>
 </div>
 </body>
+<script type="text/javascript" src="jquery/jquery-1.4.3.min.js"></script>
+<script type="text/javascript" src="jquery/control.js"></script>
+<script type="text/javascript">
+</script>
 </html>
