--- a/car.html
+++ b/car.html
@@ -14,14 +14,14 @@
     <div class="top_left">
     </div>
     <div class="top_right">
-        <img src="images/shopping_cart.png" style="width:20px;height:20px;margin-bottom:1px;" /><a href="#">购物车</a>&nbsp;|
+        <img src="images/shopping_cart.png" style="width:20px;height:20px;margin-bottom:1px;" /><a href="car.html">购物车</a>&nbsp;|
         <a href="#">我的订单</a>&nbsp;|
         <a href="#">我的心书</a>&nbsp;|
         <a href="#">帮助</a>
     </div>
 </div>
 <div class="car_header">
-   	<p><img src="images/Logo1.jpg" width="150" height="100" align="center"/>
+   	<p><a href="index.html"><img src="images/Logo1.jpg" width="150" height="100" align="center"/></a>
     <font style="color:#FF3366;font-size:16px;">购物车</font></p>
     <div class="car_search">
 		<form action="#" method="get" class="search_form">     
@@ -45,6 +45,22 @@
     	<table id="shangPing">
         	<tr>
             	<td class="th1 left"><input type="checkbox" name="checkbox1" /></td>
+                <td class="th1 left">离散数学</td>
+                <td class="th1 left">32.00</td>
+                <td class="th1 left">2</td>
+                <td class="th1 left">64.00</td>
+                <td class="th1 left">删除</td>
+            </tr>
+            <tr>
+                <td class="th1 left"><input type="checkbox" name="checkbox1" /></td>
+                <td class="th1 left">离散数学</td>
+                <td class="th1 left">32.00</td>
+                <td class="th1 left">2</td>
+                <td class="th1 left">64.00</td>
+                <td class="th1 left">删除</td>
+            </tr>
+            <tr>
+                <td class="th1 left"><input type="checkbox" name="checkbox1" /></td>
                 <td class="th1 left">离散数学</td>
                 <td class="th1 left">32.00</td>
                 <td class="th1 left">2</td>
