--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>心书网</title>
+<title>豪越铁艺金属铁制厂</title>
 <link rel="stylesheet" href="style/nivo-slider.css" type="text/css" />
 <link rel="stylesheet" href="style/style.css" type="text/css" />
 
@@ -16,8 +16,8 @@
     </div>
     <!--导航部分 -->
     <div class="nav">
-        <ul class="nav_list">
-            <li class="list_items"><a href="index.html">网站首页</a></li>
+    	<ul class="nav_list">
+        	<li class="list_items"><a href="#">网站首页</a></li>
             <li class="list_items"><a href="about.html">企业介绍</a></li>
             <li class="list_items"><a href="detail.html">产品系列</a></li>
             <li class="list_items"><a href="#">关于我们</a></li>
@@ -26,9 +26,9 @@
     <!--主体部分 -->
     <div class="main">
     	<!--左边栏 -->
-	   <div class="left_side">
-            <div class="box">
-                <div class="bd">
+    	<div class="left_side">
+        	<div class="box">
+            	<div class="bd">
                     <p class="cBlue">广州市番禺区豪越铁艺金属铁制厂</p>
                     <p class="divided">陈锦波：13590193725</p>
                     <p>公司注册地址：
@@ -42,36 +42,13 @@
             </div>
         </div>
         <div class="detail_side">
-        	<ul class="book">
-            	<li><a href="#"><img src="images/C++.jpg"/></a></li>
-                <li><a href="#"><img src="images/pinpai.jpg"/></a></li>
-                <li><a href="#"><img src="images/feiniao.jpg"/></a></li>
-                <li><a href="#"><img src="images/dw.jpg"/></a></li>
-                <li><a href="#"><img src="images/kuawei.jpg"/></a></li>
-                <li><a href="#"><img src="images/touzi.jpg"/></a></li>
-                <li><a href="#"><img src="images/ziyuan.jpg"/></a></li>
-                <li><a href="#"><img src="images/xiaoshou.jpg"/></a></li>
-                <li><a href="#"><img src="images/siwei.jpg"/></a></li>
-                <li><a href="#"><img src="images/word.jpg"/></a></li>
-                
-            </ul>
+        <img style="margin: 0px 20px 5px 0px; float: left" border=0 alt="" src="images/pic/1.jpg" width="203" height="140" />
+           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;广州市番禺区豪越铁艺金属铁制厂专业生产制造: 別墅大门、豪华电动大门庭院小门、艺术门花、窗花、 工程围栏、阳台护栏、艺术屏风、花架、玄关台等家私铁艺精品。 DA 铁艺、铁饰铁件在国内独树一致，它取欧洲的铁艺之精髓，是中西文化的艺术结晶。其制作古朴、高雅、充满欧洲情怀， 具有欧式生活的浪漫情调与东方艺术的纯朴，高雅融为一体，它将给您创造高贵典雅的艺DA。 
+                                    广州番禺弘发铁艺厂工程实例遍及，如广州华南碧桂园、广州碧桂园、顺德碧桂园、珊瑚湾半岛、锦绣银湾、丽江花园、祈福新邨、帝景山庄、麓湖名轩、凤凰城、南浦海滨花园、花都假日半岛等各类中高档小区都留下了弘发铁艺厂的铁艺精品（详参考图片）。依靠多年的经验积累和技术人员的不懈努力，本厂生产的铁艺以优质的产品、合理的价值和完善的服务受到广大客户的信任和赞许。
         </div>
     </div>
 </body>
 <script type="text/javascript" src="jquery/jquery-1.4.3.min.js"></script>
-<script type="text/javascript">
-	$(function(){
-		$(".level1 > .selected").addClass("current")   //给当前元素添加"current"样式
-		.next().show() ;
-		$(".level1 > a").click(function(){
-			$(this).addClass("current")   //给当前元素添加"current"样式
-			.next().show()                //下一个元素显示
-			.parent().siblings().children("a").removeClass("current")        //父元素的兄弟元素的子元素<a>移除"current"样式
-			.next().hide();                //它们的下一个元素隐藏
-			return false;
-		});
-		
-	});
-	
-</script>
+<script type="text/javascript" src="jquery/jquery.nivo.slider.pack.js"></script>
+<script type="text/javascript" src="jquery/control.js"></script>
 </html>
