--- a/index.html
+++ b/index.html
@@ -2,45 +2,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>心书网</title>
+<title>豪越铁艺金属铁制厂</title>
 <link rel="stylesheet" href="style/nivo-slider.css" type="text/css" />
 <link rel="stylesheet" href="style/style.css" type="text/css" />
 
 </head>
 
 <body>
-<!--顶部部分 -->
-	<div class="top_menu">
-    	<div class="top_left">
-        	<span><strong>欢迎您!</strong></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="index.html"><img src="images/collect.png" style="width:18px;height:18px;margin-top:5px;" /></a>
-            <span><a href="#">收藏心书网</a></span>
-        </div>
-        <div class="top_right">
-        	<a href="login.html" style="color:#06F;">登录</a>&nbsp;&nbsp;
-            <a href="register.html" style="color:#06F;">免费注册</a>&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;
-            <img src="images/shopping_cart.png" style="width:20px;height:20px;margin-bottom:1px;" /><a href="car.html">购物车</a>&nbsp;|
-            <a href="#">我的订单</a>&nbsp;|
-            <a href="#">我的心书</a>&nbsp;|
-            <a href="#">帮助</a>
-        </div>
-    </div>
     <!--头部部分 -->
     <div class="header">
-    	<img src="images/logo.png" style="width:150px;height:150px;float:left;"/>
-        <div class="search">
-		<form action="#" method="get" class="search_form">     
-        	<input type="text" name="s" class="sinput" placeholder="3月英语季 专八资料回收">     	
-         	<input type="submit" value="搜索" class="sbtn">
-         </form> 
-		</div>
+        <div class="big-title">广州市番禺区豪越铁艺金属铁制厂</div>
         <img src="images/code.jpg" style="width:150px;height:150px;float:right;" />
     </div>
     <!--导航部分 -->
     <div class="nav">
     	<ul class="nav_list">
-        	<li class="list_items"><a href="#">商品分类</a></li>
-            <li class="list_items"><a href="#">首页</a></li>
+        	<li class="list_items"><a href="#">网站首页</a></li>
+            <li class="list_items"><a href="about.html">企业介绍</a></li>
+            <li class="list_items"><a href="detail.html">产品系列</a></li>
             <li class="list_items"><a href="#">关于我们</a></li>
         </ul>
     </div>
@@ -49,62 +28,17 @@
     	<!--左边栏 -->
     	<div class="left_side">
         	<div class="box">
-            	<ul class="navigation">
-                    <li class="level1">
-                        <a  href="detail.html" class="selected">学霸笔记<span style="float:right;">>&nbsp;&nbsp;&nbsp;&nbsp;</span></a>
-                        <ul class="level2">
-                            <li><a href="detail.html">文科</a></li>
-                            <li><a href="detail.html">理工</a></li>
-                            <li><a href="detail.html">考研</a></li>
-                            <li><a href="detail.html">公务员</a></li>
-                        </ul>
-                    </li>
-                    <li class="level1">
-                        <a href="detail.html">考研<span style="float:right;">>&nbsp;&nbsp;&nbsp;&nbsp;</span></a>
-                        <ul class="level2">
-                            <li><a href="detail.html">金融</a></li>
-                            <li><a href="detail.html">心理学</a></li>
-                            <li><a href="detail.html">MBA</a></li>
-                            <li><a href="detail.html">在职</a></li>
-                        </ul>
-                    </li>
-                    <li class="level1">
-                        <a href="#">考证<span style="float:right;">>&nbsp;&nbsp;&nbsp;&nbsp;</span></a>
-                        <ul class="level2">
-                            <li><a href="#">会计从业</a></li>
-                            <li><a href="#">初级会计</a></li>
-                            <li><a href="#">中级会计</a></li>
-                            <li><a href="#">高级会计</a></li>
-                        </ul>
-                    </li>
-                    <li class="level1">
-                        <a href="#">公务员考试<span style="float:right;">>&nbsp;&nbsp;&nbsp;&nbsp;</span></a>
-                        <ul class="level2">
-                            <li><a href="#">基础知识</a></li>
-                            <li><a href="#">真题及面试技巧</a></li>
-                            <li><a href="#">申论</a></li>
-                            <li><a href="#">行政职业能力</a></li>
-                        </ul>
-                    </li>
-                    <li class="level1">
-                        <a href="#">外语考试<span style="float:right;">>&nbsp;&nbsp;&nbsp;&nbsp;</span></a>
-                        <ul class="level2">
-                            <li><a href="#">四级</a></li>
-                            <li><a href="#">六级</a></li>
-                            <li><a href="#">专四</a></li>
-                            <li><a href="#">专八</a></li>
-                        </ul>
-                    </li>
-                    <li class="level1">
-                        <a href="#">经典读物<span style="float:right;">>&nbsp;&nbsp;&nbsp;&nbsp;</span></a>
-                        <ul class="level2">
-                            <li><a href="#">人文</a></li>
-                            <li><a href="#">科技</a></li>
-                            <li><a href="#">文艺</a></li>
-                            <li><a href="#">小说</a></li>
-                        </ul>
-                    </li>
-                  </ul>
+            	<div class="bd">
+                    <p class="cBlue">广州市番禺区豪越铁艺金属铁制厂</p>
+                    <p class="divided">陈锦波：13590193725</p>
+                    <p>公司注册地址：
+                        广州市番禺区豪越铁艺金属铁制厂
+                    </p>
+                    <p>
+                        主营产品：
+                        其他门 护栏、护栏网 其他窗 金属建材,別墅大门、豪华电动大门庭院小门、艺术门花、窗花、 工程围栏、阳台护栏、艺术屏风、花架、玄关台等家私铁艺精品。
+                    </p>
+                </div>
             </div>
         </div>
         <div class="center_side">
